# text-image-generator

./: .gitignore  Cargo.toml  ch.txt  config.yaml  main_font.txt  pyproject.toml  readme.md  text_image_generator.pyi
src/: corpus.rs  cv_util.rs  font_util.rs  image_process.rs  init.rs  lib.rs  merge_util.rs  parse_config.rs  utils.rs
src/effect_helper/: cv.rs  gaussian_blur.rs  math.rs  mod.rs  poisson_editing.rs
synth_text/corpus/: chinese-fre.txt  chinese.txt
