[package]
name = "text-image-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "text_image_generator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["indexmap"] }
numpy = "0.18.0"
indexmap = "1.9.3"
cosmic-text = "0.8.0"
rand = "0.8.5"
rand_distr = "0.4.3"
utf8-width = "0.1.6"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
image = "0.24.6"
