[package]
name = "text-image-generator"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "text_image_generator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["indexmap", "extension-module"] }
numpy = "0.20.0"
indexmap = "2.1.0"
cosmic-text = "0.11.2"
rand = "0.8.5"
rand_distr = "0.4.3"
utf8-width = "0.1.6"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
image = "0.24.6"
serde_yaml = "0.9.30"
nalgebra = "0.32.3"
imageproc = "0.23.0"
conv = "0.3.3"
